--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: '3.8'
 
 services:
   intelligence-hub:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: intelligence-hub
     ports:
       - "8000:8000"
     environment:
